# AuraServer

./: .gitattributes  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Core.md  README.md  Test-Hexagons.ipynb  git-pull.sh
.ipynb_checkpoints/: Test-Hexagons-checkpoint.ipynb
cmake/: Macros.cmake
src/: .drone.yml  CMakeLists.txt  common.hpp
src/aura/: CMakeLists.txt  main.cpp
src/aura/client/: aura_client.cpp  aura_client.hpp
src/aura/crypto/: random_i.hpp
src/aura/entity/: aura_entity.cpp  aura_entity.hpp
src/aura/framework/: framework.cpp  framework.hpp
src/aura/server/: atomic_autoincrement.cpp  atomic_autoincrement.hpp  aura_server.cpp  aura_server.hpp  fight_handler.cpp  login_handler.cpp  movement_handler.cpp  opcodes.hpp
src/cluster/map_based/: cluster_element.hpp  debug.hpp
src/cluster/sibling_based/: cluster_element.hpp  cluster_i.hpp
src/crypto/: random.cpp  random.hpp
src/dbos/: CMakeLists.txt
src/dbos/crypto/: random_i.hpp
src/map/: cell.hpp  map.hpp  map_i.hpp
src/shinzui/: CMakeLists.txt  eop.cpp
src/shinzui/cluster/map_based/: cluster.hpp  cluster_i.hpp
src/shinzui/cluster/sibling_based/: cluster.hpp
src/shinzui/defs/: common.hpp
src/shinzui/map/: cell.hpp  map_i.hpp
src/tests/: CMakeLists.txt  main.cpp
